force-app/main/default/objects/numm__FAType__c/numm__FAType__c.object-meta.xml
<CustomObject>
    <description>Objet des types d&#39;immobilisations</description>
    <label>Type</label>
    <nameField>
        <label>Libellé</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>