force-app/main/default/objects/numm__FAType__c/fields/numm__AmountMax__c.field-meta.xml
<CustomField>
    <fullName>numm__AmountMax__c</fullName>
    <label>Base d&#39;amortissement fiscale maximale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>