force-app/main/default/objects/numm__FAType__c/fields/numm__CoeffAmountFisc__c.field-meta.xml
<CustomField>
    <fullName>numm__CoeffAmountFisc__c</fullName>
    <description>Coefficient appliqué au montant hors taxe afin de calculé la base d&#39;amortissement fiscale maximale conseillée. Base = Montant Hors Taxe  - (Montant Hors Taxe  x Coeff)</description>
    <inlineHelpText>Coefficient appliqué au montant hors taxe afin de calculé la base d&#39;amortissement fiscale maximale conseillée. Base = Montant Hors Taxe  - (Montant Hors Taxe  x Coeff)</inlineHelpText>
    <label>Coefficient appliqué au montant hors tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>