force-app/main/default/objects/numm__FAType__c/fields/numm__Exception__c.field-meta.xml
<CustomField>
    <fullName>numm__Exception__c</fullName>
    <label>Exception</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FE</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>IMS</fullName>
            </value>
            <value>
                <fullName>LOG</fullName>
            </value>
            <value>
                <fullName>VEH</fullName>
            </value>
            <value>
                <fullName>VET</fullName>
            </value>
            <value>
                <fullName>VMP</fullName>
            </value>
            <value>
                <fullName>VTN</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>ENER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>