force-app/main/default/objects/numm__FAType__c/fields/numm__FAAccountList__c.field-meta.xml
<CustomField>
    <fullName>numm__FAAccountList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schéma comptable</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__FAAccountList__c.numm__FAItemAccount__r.numm__ItemCode__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__FAAccountList__c</referenceTo>
    <relationshipLabel>Types</relationshipLabel>
    <relationshipName>FA_Types_d_immobilisations</relationshipName>
    <type>Lookup</type>
</CustomField>