force-app/main/default/objects/numm__FAType__c/fields/numm__IsAccelerated__c.field-meta.xml
<CustomField>
    <fullName>numm__IsAccelerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dégressif</label>
    <type>Checkbox</type>
</CustomField>