force-app/main/default/objects/numm__FAType__c/fields/numm__IsBuilt__c.field-meta.xml
<CustomField>
    <fullName>numm__IsBuilt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batie</label>
    <type>Checkbox</type>
</CustomField>