force-app/main/default/objects/numm__FAType__c/fields/numm__MonthMax__c.field-meta.xml
<CustomField>
    <fullName>numm__MonthMax__c</fullName>
    <label>Durée fiscale maximale (mois)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>