force-app/main/default/objects/numm__FAType__c/fields/numm__MonthMin__c.field-meta.xml
<CustomField>
    <fullName>numm__MonthMin__c</fullName>
    <label>Durée fiscale minimale (mois)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>