force-app/main/default/objects/numm__FAType__c/fields/numm__Proportion__c.field-meta.xml
<CustomField>
    <fullName>numm__Proportion__c</fullName>
    <label>Prorata</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jour</fullName>
                <default>true</default>
                <label>Jour</label>
            </value>
            <value>
                <fullName>Mois</fullName>
            </value>
            <value>
                <fullName>Année</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>