force-app/main/default/objects/numm__FAType__c/fields/numm__Sort__c.field-meta.xml
<CustomField>
    <fullName>numm__Sort__c</fullName>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporelle</fullName>
                <default>true</default>
                <label>Corporelle</label>
            </value>
            <value>
                <fullName>Incorporelle</fullName>
            </value>
            <value>
                <fullName>Financière</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>