force-app/main/default/objects/numm__FAType__c/fields/numm__Tax__c.field-meta.xml
<CustomField>
    <fullName>numm__Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taxe</label>
    <referenceTo>numm__FATax__c</referenceTo>
    <relationshipName>Types_d_immobilisations</relationshipName>
    <type>Lookup</type>
</CustomField>