force-app/main/default/objects/numm__FAType__c/validationRules/numm__DureeMinMax.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__DureeMinMax</fullName>
    <active>true</active>
    <description>La durée minimale doit être inférieure à la durée maximale</description>
    <errorConditionFormula>numm__MonthMax__c &lt; numm__MonthMin__c</errorConditionFormula>
    <errorMessage>La durée minimale doit être inférieure à la durée maximale.</errorMessage>
</ValidationRule>